Fix a bug where the 'gap' aka ellipses is vertically centered in paging controls

--- a/agnostic-react/src/pagination.module.css
+++ b/agnostic-react/src/pagination.module.css
@@ -22,6 +22,11 @@
   composes: pagination-item-active from './pagination.css';
 }
 
+.paginationItemGap {
+  composes: pagination-item-gap from './pagination.css';
+}
+
+
 .paginationItemDisabled {
   composes: pagination-item-disabled from './pagination.css';
 }
